--- a/react-yugioh/package.json
+++ b/react-yugioh/package.json
@@ -17,5 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "8.2.0",
+    "npm": "5.3.0"
   }
 }
